--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="shortcut icon" href="Screenshot 2025-03-04 164201.png" >
-    <link rel="stylesheet" href="portfolio.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/e11fcca011.js" crossorigin="anonymous"></script>
 </head>
 <body>
