calculator link updated

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
+                    <!-- <li><a href="#services">Services</a></li> -->
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
@@ -46,7 +46,7 @@
                 <div class="about-col-2">
                     <h1 class="sub-title">About me</h1>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat molestiae, et non molestias quod sed necessitatibus sapiente aspernatur vitae quisquam iste, fuga libero perferendis corrupti quasi pariatur ipsam totam dolores quas, itaque explicabo consequuntur adipisci. Quia a aperiam ullam minus cumque atque suscipit quas quod fugiat, nulla, perferendis eaque numquam.
+                        Hi, I'm Harish Maske, a Mathematics and Data Science student at NIT Bhopal, passionate about machine learning, data analysis, and web development. I've worked on space technology projects, built ML-based health tools, and developed full-stack applications using Python, Flask, React, and JavaScript. I enjoy solving complex problems through technology.
                     </p>
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
@@ -78,7 +78,7 @@
             </div>
         </div>
     </div>
-    <!-- =========================services================================ -->
+    <!-- =========================services================================
     <div id="services">
         <div class="container">
             <h1 class="sub-title">My Services</h1>
@@ -103,7 +103,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- =========================portfolio================================ -->
     <div id="portfolio">
         <div class="container">
@@ -122,7 +122,7 @@
                     <div class="layer">
                         <h3>Simple Calculator</h3>
                         <p>this will help you to solve your math problems.</p>
-                        <a href="calculator.html "><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://simple-calculator-rouge-ten.vercel.app/ "><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
