update portfolio link

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <div class="layer">
                         <h3>My Portfolio</h3>
                         <p>this portfolio is created using HTML,CSS Nd Javascript.</p>
-                        <a href="portfolio.html"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://portfolio-delta-flax-40.vercel.app/"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
