--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                         <a href=""><i class="fa-brands fa-square-x-twitter"></i></a>
                         
                     </div>
-                    <a href="RenderCV_EngineeringResumes_Theme.pdf" download class="btn btn2">Download CV</a>
+                    <a href="hmresume.pdf" download class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
